Make float comparison factor smaller in ViewModel when checking if share ratio has changed

BUG: 297931